; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_recursive_mkdir.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_recursive_mkdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MKDIR_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @recursive_mkdir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @recursive_mkdir(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @os_mkdir(i8* %6)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @MKDIR_ERROR, align 4
  %10 = icmp ne i32 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* %5, align 4
  store i32 %12, i32* %2, align 4
  br label %34

13:                                               ; preds = %1
  %14 = load i8*, i8** %3, align 8
  %15 = call i8* @strrchr(i8* %14, i8 signext 47)
  store i8* %15, i8** %4, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %20, label %18

18:                                               ; preds = %13
  %19 = load i32, i32* @MKDIR_ERROR, align 4
  store i32 %19, i32* %2, align 4
  br label %34

20:                                               ; preds = %13
  %21 = load i8*, i8** %4, align 8
  store i8 0, i8* %21, align 1
  %22 = load i8*, i8** %3, align 8
  %23 = call i32 @recursive_mkdir(i8* %22)
  store i32 %23, i32* %5, align 4
  %24 = load i8*, i8** %4, align 8
  store i8 47, i8* %24, align 1
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* @MKDIR_ERROR, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %20
  %29 = load i32, i32* @MKDIR_ERROR, align 4
  store i32 %29, i32* %2, align 4
  br label %34

30:                                               ; preds = %20
  %31 = load i8*, i8** %3, align 8
  %32 = call i32 @os_mkdir(i8* %31)
  store i32 %32, i32* %5, align 4
  %33 = load i32, i32* %5, align 4
  store i32 %33, i32* %2, align 4
  br label %34

34:                                               ; preds = %30, %28, %18, %11
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i32 @os_mkdir(i8*) #1

declare dso_local i8* @strrchr(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
